Fix display voting relust (on modal) on mobile

--- a/themes/mobile_default/css/style.css
+++ b/themes/mobile_default/css/style.css
@@ -611,10 +611,32 @@ ul.list-control li{
 	margin-right: 0px;
 }
 
-/* css form-control */
 .form-control{
 	-webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
 	box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+}
+
+.modal-header .close {
+	margin-top: -2px;
+}
+
+button.close {
+	padding: 0;
+	cursor: pointer;
+	background: 0 0;
+	border: 0;
+	-webkit-appearance: none;
+}
+
+.close {
+	float: right;
+	font-size: 21px;
+	font-weight: 700;
+	line-height: 1;
+	color: #000;
+	text-shadow: 0 1px 0 #fff;
+	opacity: .2;
+	filter: alpha(opacity=20);
 }
 
 .sidebar-nav{
